[package]
name = "cminusminus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = "1.1.5"
clap = { version = "4.4.3", features = ["derive"] }
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
lazy_static = "1.4.0"
miette = { version = "5.10.0", features = ["fancy"] }
resolve-path = "0.1.0"
thiserror = "1.0.48"
